<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_main"
        tools:context=".MainActivity">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
        >
            <TextView
                    android:text="@string/file_prefix"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/titleFilePrefix"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:text="Name"
                    android:ems="10"
                    android:id="@+id/filePrefix" android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:text="Rotation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/titleRotation" android:layout_weight="1"/>
            <TextView
                    android:text="rotation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/rotation" android:layout_weight="1"/>
        </LinearLayout>
        <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
        >
<!--Accelerometer-->
            <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
                <TextView
                        android:text="Acelerometer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/titleAccelerometer"
                        android:layout_column="1"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/titleAccAccuracy"
                        android:text="@string/titleAccuracy"
                        android:layout_margin="5dp"
                        android:layout_column="2"/>
                <TextView
                        android:text="accAccuracy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/accAccuracy"
                        android:layout_margin="5dp"
                        android:layout_column="3"/>
            </TableRow>
            <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/titleAccX"
                        android:text="@string/titleX"
                        android:layout_margin="5dp"
                        android:layout_column="2"/>
                <TextView
                        android:text="accX"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/accX"
                        android:layout_margin="5dp"
                        android:layout_column="3"/>
            </TableRow>
            <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/titleAccY" android:text="@string/titleY"
                        android:layout_margin="5dp"
                        android:layout_column="2"/>
                <TextView
                        android:text="accY"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/accY"
                        android:layout_margin="5dp"
                        android:layout_column="3"/>
            </TableRow>
            <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/titleAccZ" android:text="@string/titleZ"
                        android:layout_margin="5dp"
                        android:layout_column="2"/>
                <TextView
                        android:text="accZ"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/accZ"
                        android:layout_margin="5dp"
                        android:layout_column="3"/>
            </TableRow>
            <!--Gravity-->
            <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
                <TextView
                        android:text="Gravity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/titleGravity"
                        android:layout_column="1"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/titleGravityAccuracy"
                        android:text="@string/titleAccuracy"
                        android:layout_margin="5dp"
                        android:layout_column="2"/>
                <TextView
                        android:text="gravityAccuracy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/gravityAccuracy"
                        android:layout_margin="5dp"
                        android:layout_column="3"/>
            </TableRow>
            <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/titleGravityX" android:text="@string/titleX"
                        android:layout_margin="5dp"
                        android:layout_column="2"/>
                <TextView
                        android:text="accX"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/gravityX"
                        android:layout_margin="5dp"
                        android:layout_column="3"/>
            </TableRow>
            <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/titleGravityY" android:text="@string/titleY"
                        android:layout_margin="5dp"
                        android:layout_column="2"/>
                <TextView
                        android:text="accY"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/gravityY"
                        android:layout_margin="5dp"
                        android:layout_column="3"/>
            </TableRow>
            <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/titleGravityZ" android:text="@string/titleZ"
                        android:layout_margin="5dp"
                        android:layout_column="2"/>
                <TextView
                        android:text="accZ"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/gravityZ"
                        android:layout_margin="5dp"
                        android:layout_column="3"/>
            </TableRow>
            <!--Gyroscope-->
            <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
                <TextView
                        android:text="Gyroscope"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/titleGyro"
                        android:layout_column="1"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/titleGyroAccuracy"
                        android:text="@string/titleAccuracy"
                        android:layout_margin="5dp"
                        android:layout_column="2"/>
                <TextView
                        android:text="gyroAccuracy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/gyroAccuracy"
                        android:layout_margin="5dp"
                        android:layout_column="3"/>
            </TableRow>
            <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/titleGyroX" android:text="@string/titleX"
                        android:layout_margin="5dp"
                        android:layout_column="2"/>
                <TextView
                        android:text="accX"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/gyroX"
                        android:layout_margin="5dp"
                        android:layout_column="3"/>
            </TableRow>
            <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/titleGyroY" android:text="@string/titleY"
                        android:layout_margin="5dp"
                        android:layout_column="2"/>
                <TextView
                        android:text="accY"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/gyroY"
                        android:layout_margin="5dp"
                        android:layout_column="3"/>
            </TableRow>
            <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/titleGyroZ" android:text="@string/titleZ"
                        android:layout_margin="5dp"
                        android:layout_column="2"/>
                <TextView
                        android:text="accZ"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/gyroZ"
                        android:layout_margin="5dp"
                        android:layout_column="3"/>
            </TableRow>
            <!--Fused Location-->
            <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
                <TextView
                        android:text="Fused Location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/titleGms"
                        android:layout_column="1"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/titleGmsAccuracy"
                        android:text="@string/titleAccuracy"
                        android:layout_margin="5dp"
                        android:layout_column="2"/>
                <TextView
                        android:text="gmsAccuracy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/gmsAccuracy"
                        android:layout_margin="5dp"
                        android:layout_column="3"/>
            </TableRow>
            <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/titleGmsLatitude" android:text="@string/titleLatitude"
                        android:layout_margin="5dp"
                        android:layout_column="2"/>
                <TextView
                        android:text="accX"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/gmsLatitude"
                        android:layout_margin="5dp"
                        android:layout_column="3"/>
            </TableRow>
            <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/titleGmsLongitude" android:text="@string/titleLongitude"
                        android:layout_margin="5dp"
                        android:layout_column="2"/>
                <TextView
                        android:text="accY"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/gmsLongitude"
                        android:layout_margin="5dp"
                        android:layout_column="3"/>
            </TableRow>
        </TableLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>